fix mobile version layout bug

--- a/src/App.css
+++ b/src/App.css
@@ -5,6 +5,7 @@
 
 .App-header {
   min-height: 9vh;
+  padding: 3vh;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -18,11 +19,11 @@ a:visited {
 }
 
 .App-main {
-  min-height: 91vh;
+  min-height: -webkit-fill-available;
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
+  justify-content: top;
   font-size: calc(10px + 2vmin);
   color: whitesmoke;
 }
